--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.card{
+    color: rgb(173, 233, 233);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: rgb(68, 61, 61);
+    opacity: 0.88;
+    font-weight: bold;
+    margin-top: -45rem;
+    margin-left: 32rem;
+    margin-right: 32rem;
+    padding: 3rem;
+    z-index: +5;
+    position: relative;
+    text-align: center;
+    border-radius: 10%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+    color: rgb(178, 238, 238);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image{
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
 }
