--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 .card{
     color: rgb(196, 253, 255);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: rgb(68, 61, 61);
-    opacity: 0.88;
+    background-color: rgb(56, 53, 53);
+    opacity: 0.96;
     font-weight: bold;
     margin-top: -45rem;
     margin-left: 32rem;
     margin-right: 32rem;
     padding: 2rem;
-    z-index: +5;
+    z-index: +3;
     position: relative;
     text-align: center;
     border-radius: 10%;
@@ -22,8 +22,28 @@ h1{
     height: 200px;
     width: 200px;
     border-radius: 50%;
+    border-color: black;
+    border-width: 10px;
 }
 
-.FaGithub{
-    size:5rem;
+.icon{
+     padding: 0.25rem;
+     color: rgb(7, 250, 250);
+     zoom: 3;
+}
+
+.icon:hover{
+    color: rgb(255, 255, 255);
+    }
+
+h1:hover{
+    color: rgb(255, 255, 255);
+    font-family:'Times New Roman', Times, serif;
+    zoom: 1.1;
+}
+
+p:hover{
+    color: rgb(255, 255, 255);
+    font-family:'Times New Roman', Times, serif;
+    zoom: 1.3;
 }
