--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,32 @@
+body{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
 .card{
+    position: absolute;
+    text-align: center;
     color: rgb(196, 253, 255);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(56, 53, 53);
     opacity: 0.96;
     font-weight: bold;
-    margin-top: -45rem;
-    margin-left: 32rem;
-    margin-right: 32rem;
+    margin-top: 2rem;
+    margin-left: 34%;
     padding: 2rem;
-    z-index: +3;
-    position: relative;
-    text-align: center;
+    
     border-radius: 10%;
     box-shadow: 0 4px 8px 0 rgba(248, 248, 248, 0.863), 0 6px 15px 0 rgba(247, 242, 242, 0.671);
 }
 
-h1{
+.heading{
+    padding: 0.5rem;
+    font-size: 2rem;
     color: rgb(178, 238, 238);
 }
 
 .image{
-    height: 200px;
-    width: 200px;
+    height: 12.5rem;
+    width: 12.5rem;
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(71, 151, 134, 0.945), 0 6px 15px rgba(247, 242, 242, 0.753);
 }
@@ -36,7 +41,7 @@ h1{
     color: rgb(255, 255, 255);
     }
 
-h1:hover{
+.heading:hover{
     color: rgb(255, 255, 255);
     font-family:'Times New Roman', Times, serif;
     zoom: 1.1;
@@ -47,4 +52,39 @@ p:hover{
     color: rgb(255, 255, 255);
     font-family:'Times New Roman', Times, serif;
     zoom: 1.3;
+}
+
+@media only screen and (max-width: 700px) {
+    .card{
+        position: absolute;
+        text-align: center;
+        color: rgb(196, 253, 255);
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: rgb(56, 53, 53);
+        opacity: 0.96;
+        font-weight: bold;
+        margin-top: 2rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        padding: 1rem;
+        
+        border-radius: 10%;
+        box-shadow: 0 4px 8px 0 rgba(248, 248, 248, 0.863), 0 6px 15px 0 rgba(247, 242, 242, 0.671);
+    }
+
+    .image{
+        height: 9.5rem;
+        width: 9.5rem;
+        border-radius: 50%;
+        box-shadow: 0 4px 8px rgba(71, 151, 134, 0.945), 0 6px 15px rgba(247, 242, 242, 0.753);
+    }
+
+    .heading{
+        color: rgb(178, 238, 238);
+        font-size: 1.5rem; 
+    }
+    .icon{
+        padding: 0.15rem;
+        zoom: 2;
+    }
 }
