--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,9 @@ p:hover{
 }
 
 @media only screen and (max-width: 700px) {
+    body{
+        position: fixed;
+    }
     .card{
         position: absolute;
         text-align: center;
